Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef int BOOL;
typedef void * HCARD;
typedef int HCARD;
typedef void * HCORE;
typedef int HCORE;
typedef void ** LPHCORE;
typedef int * LPHCORE;
typedef int ERRVAL;
BTICardAPI VOID __stdcall BTICard_ChDARSet(USHORT maskval,USHORT addrval,INT channum,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ChDARWrL(ULONG value,USHORT addrval,INT channum,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ChDARWrsW(LPUSHORT valueptr,USHORT addrval,INT countval,INT channum,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ChDARWrW(USHORT value,USHORT addrval,INT channum,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CISRd(LPUSHORT buf,USHORT bufcount,INT cistype,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CISWr(LPUSHORT buf,USHORT bufcount,INT cistype,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_CommBufRd(USHORT offset,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CommBufWr(USHORT value,USHORT offset,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommCall(ULONG addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommChannelReconfig(ULONG chmask,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommCheck(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommDisable(USHORT command,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommDisableEx(USHORT command,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommEnable(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommExternSRQ(ULONG chmask,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommFillW(USHORT value,ULONG addrval,USHORT count,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_CommProtocolFunc(USHORT opcode,USHORT argcount,LPUSHORT argbuf,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_CommRdL(ULONG addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_CommRdW(ULONG addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT codeptr,USHORT codecount,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CommWrL(ULONG value,ULONG addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CommWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_CommWrW(USHORT value,ULONG addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcCheck(HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcGetInfo(LPULONG valueptr,USHORT infotype,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemRdL(LPULONG valueptr,ULONG addrval,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemRdsL(LPULONG valueptr,ULONG addrval,ULONG count,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemRdsW(LPUSHORT valueptr,ULONG addrval,ULONG count,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemRdW(LPUSHORT valueptr,ULONG addrval,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemWrL(ULONG value,ULONG addrval,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemWrsL(LPULONG valueptr,ULONG addrval,ULONG count,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemWrsW(LPUSHORT valueptr,ULONG addrval,ULONG count,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoProcMemWrW(USHORT value,ULONG addrval,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_CoreOpen(LPHCORE lphCore,INT corenum,HCARD hCard);
BTICardAPI VOID __stdcall BTICard_DARClr(USHORT maskval,USHORT addrval,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_DARGet(USHORT maskval,USHORT addrval,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_DARRdL(USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_DARRdsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_DARRdW(USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_DARSet(USHORT maskval,USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_DARWrL(ULONG value,USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_DARWrsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_DARWrW(USHORT value,USHORT addrval,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_Div(ULONG diva,ULONG divb);
BTICardAPI VOID __stdcall BTICard_Div64(LPULONG resulth,LPULONG resultl,ULONG valah,ULONG valal,ULONG valbh,ULONG valbl);
BTICardAPI INT __stdcall BTICard_DllUsageCount(VOID);