Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS

            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARSet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ChDARSet(UInt16 maskval, UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARWrL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ChDARWrL(UInt32 value, UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARWrsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ChDARWrsW(UInt16[] valueptr, UInt16 addrval, Int32 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ChDARWrW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ChDARWrW(UInt16 value, UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CISRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CISRd(ref UInt16 buf, UInt16 bufcount, Int32 cistype, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CISWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CISWr(ref UInt16 buf, UInt16 bufcount, Int32 cistype, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommBufRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_CommBufRd(UInt16 offset, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommBufWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CommBufWr(UInt16 value, UInt16 offset, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommCall(UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommChannelReconfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommChannelReconfig(UInt32 chmask, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommCheck(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommDisable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommDisable(UInt16 command, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommDisableEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommDisableEx(UInt16 command, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommEnable(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommExternSRQ@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommExternSRQ(UInt32 chmask, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommFillW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommFillW(UInt16 value, UInt32 addrval, UInt16 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommProtocolFunc@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommProtocolFunc(UInt16 opcode, UInt16 argcount, ref UInt16 argbuf, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_CommRdL(UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommRdsW(UInt16[] valueptr, UInt32 addrval, UInt16 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_CommRdW(UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommRun@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommRun(ref UInt16 dataptr, UInt16 datacount, ref UInt16 codeptr, UInt16 codecount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CommWrL(UInt32 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CommWrsW(UInt16[] valueptr, UInt32 addrval, UInt16 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CommWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_CommWrW(UInt16 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcCheck(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcGetInfo@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcGetInfo(ref UInt32 valueptr, UInt16 infotype, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemRdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemRdL(ref UInt32 valueptr, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemRdsL(UInt32[] valueptr, UInt32 addrval, UInt32 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemRdsW(UInt16[] valueptr, UInt32 addrval, UInt32 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemRdW(ref UInt16 valueptr, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemWrL(UInt32 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemWrsL(UInt32[] valueptr, UInt32 addrval, UInt32 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemWrsW(UInt16[] valueptr, UInt32 addrval, UInt32 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoProcMemWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoProcMemWrW(UInt16 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_CoreOpen@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_CoreOpen(ref IntPtr lphcore, Int32 corenum, IntPtr hcard);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARClr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_DARClr(UInt16 maskval, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DARGet(UInt16 maskval, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_DARRdL(UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_DARRdsW(UInt16[] valueptr, UInt16 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_DARRdW(UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_DARSet(UInt16 maskval, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_DARWrL(UInt32 value, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_DARWrsW(UInt16[] valueptr, UInt16 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DARWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_DARWrW(UInt16 value, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_Div(UInt32 diva, UInt32 divb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Div64@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_Div64(ref UInt32 resulth, ref UInt32 resultl, UInt32 valah, UInt32 valal, UInt32 valbh, UInt32 valbl);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DllUsageCount();
